package app.entities.products.materials.planks;

public class Rafter extends Plank {
    public Rafter(int productID, int subProductID, String name, String description, double costPrice, double salesPrice, int length, int width, int maxLength, String unit, int height) {
        super(productID, subProductID, name, description, costPrice, salesPrice, length, width, maxLength, unit, height);
    }
}
