@startuml

abstract class User {
  - String firstName
  - String lastName
  - int phoneNumber
  - String email
}

class Customer extends User {
- List<Order> myOrders
}

class Staff extends User {
  - String password
  - List<Order> myWorkOrders
}

class SalesManager extends Staff

class Order {
  - LocalDate orderDate
  - String orderStatus
  - String paymentStatus
  - Carport carport
  - Customer customer
  - Staff staff
}

class Carport {
- int width
- int length
- int height
- String roofType
- int roofAngle
- Post post
- Beam beam
- Rafter rafter
- Fascia fascia
- RoofCover roofCover
  - List<Material> materials
  - Guide guide
}

class Material {
  - String name
  - String description
  - double costPrice
  - double salesPrice
  - String unit
}

class PlankAndRoof extends Material {
- int length
- int width
- int maxLength
}

class Plank extends PlankAndRoof {
- int height
}

class Post extends Plank {
- boolean treatedForGroundContact
}

class Beam extends Plank {
- int maxLengthBetweenPosts
}

class Rafter extends Plank {
}

class Fascia extends Plank {
- boolean supportsGutters
}

class RoofCover extends PlankAndRoof {
- int lengthOverlap
- float sideOverlap
- int maxLengthBetweenRafters
}

class Guide {
  - Svg guide
}

' Relationships
Customer "1" -- "0..*" Order : places >
Staff "1" -- "0..*" Order : handles >
Order "1" *-- "1" Carport
Carport "1" *-- "0..*" Material
Carport "1" *-- "1" Guide

@enduml
